--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -48,6 +48,7 @@ h4,
 h5,
 h6 {
   line-height: 1.1;
+  color: var(--dark-gray);
 }
 
 h1 {
@@ -142,7 +143,7 @@ mark,
 }
 
 ::selection {
-  background-color: lavender;
+  background-color: var(--light-gray);
 }
 
 img {
