--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -1,7 +1,7 @@
 .blog h1 a {
   text-decoration: none;
   font-size: 48px;
-  color: lavender;
+  color: var(--light-gray);
   margin-left: -40px;
 }
 
