--- a/static/global.css
+++ b/static/global.css
@@ -1,9 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700&family=Open+Sans&display=swap');
+
 html {
-    
-    /* Color Palette */
-    --light: #FFFFFF;
-    --light-gray: #F1F3F4;
-    --dark-gray: #2A7886;
-    --primary: #79BAC1;
-    --accent: #512B58;
+  /* Font Familys */
+  --ff-default: -apple-system-body, BlinkMacSystemFont, 'Open Sans', 'Segoe UI',
+    Tahoma, sans-serif;
+  --ff-accent: -apple-system, BlinkMacSystemFont, 'Jost', 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    Arial, sans-serif;
+  --ff-mono: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
+    'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
+    'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
+    monospace;
+
+  /* Font Sizes */
+  --fs-massive: 3.052rem;
+  --fs-huge: 2.441rem;
+  --fs-great: 1.953rem;
+  --fs-large: 1.563rem;
+  --fs-medium: 1.25rem;
+  --fs-regular: 1rem;
+  --fs-small: 0.8rem;
+  --fs-tiny: 0.64rem;
+
+  /* Color Palette */
+  --light: #ffffff;
+  --light-gray: #f1f3f4;
+  --dark-gray: #2a7886;
+  --primary: #79bac1;
+  --accent: #512b58;
 }
