--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,11 +4,11 @@
 
 // Colors
 $color-base: #222;
-$color-primary: #5D93FF;
-$color-secondary: #F7A046;
+$color-primary: #2762d8;
+$color-secondary: #e02200;
 
 $color-white: #FFF;
-$color-gray: lighten($color-base, 40%);
+$color-gray: lighten($color-base, 30%);
 $color-gray-border: lighten($color-base, 77%);
 $color-gray-bg: lighten($color-base, 79%);
 
