--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -19,6 +19,9 @@
   }
 
   &__body {
+    max-width: $layout-post-width;
+    margin: 0 auto;
+
     & figure {
       @include margin-bottom(1);
 
@@ -42,12 +45,6 @@
 
     & a {
       text-decoration: underline
-    }
-
-    & * {
-      max-width: $layout-post-width;
-      margin-left: auto;
-      margin-right: auto
     }
 
     & img {
